[ADD] support to present postal codes on tableView

--- a/PostalCode/Resources/Base.lproj/Main.storyboard
+++ b/PostalCode/Resources/Base.lproj/Main.storyboard
@@ -15,9 +15,24 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0Uh-ex-D5d">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0Uh-ex-D5d" secondAttribute="bottom" id="4G8-5z-Qoy"/>
+                            <constraint firstItem="0Uh-ex-D5d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="53R-RK-gas"/>
+                            <constraint firstItem="0Uh-ex-D5d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MSO-DU-xWC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0Uh-ex-D5d" secondAttribute="trailing" id="q5a-Kk-W53"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="0Uh-ex-D5d" id="gil-ca-Ziy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
